@@ -164,7 +164,7 @@ Run the configure script to initialize variables and create a Makefile as follow
 <li>Replace <i>htmurl</i> with the actual url you will be using to access the HTML for the main interface and documentation (default is <i>/nagios/</i>)
 <li>Replace <i>someuser</i> with the name of a user on your system that will be used for setting permissions on the installed files (default is <i>nagios</i>)
 <li>Replace <i>somegroup</i> with the name of a group on your system that will be used for setting permissions on the installed files (default is <i>nagios</i>)
-<li>Replace <i>cmdgroup</i> with the name of the group running the web server (default is <i>nagios</i>)
+<li>Replace <i>cmdgroup</i> with the name of the group running the web server (default is <i>nagios</i>, in the example above it was <i>nagcmd</i>).  This will allow group members (i.e. your web server) to be able to submit external commands to Nagios.
 </ul>
 </i>
 </p>
