@@ -705,7 +705,7 @@ This directive determines which service states "stalking" is enabled for.  Valid
 
 <p><div class="SectionTitle">Description:</div></p>
 <p>
-A service group definition is used to group one or more services together for display purposes in the <a href="cgis.hml">CGIs</a>.
+A service group definition is used to group one or more services together for display purposes in the <a href="cgis.html">CGIs</a>.
 </p>
 
 <p><div class="SectionTitle">Definition Format:</div></p>
